--- a/content/blog/git-bisect.mdx
+++ b/content/blog/git-bisect.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Git Bisect, the best bug hunter xd'
-publishedAt: 'April 3, 2024'
+title: 'Git Bisect, the best bug hunter'
+publishedAt: 'August 1, 2024'
 author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/git-bisect/placeholder.png'
@@ -8,14 +8,14 @@ shortDescription: 'That"s the built-in tool in Git for finding specific commits'
 ---
 
 
-Let's discuss how to solve a common problem when working in teams. Suddenly, you realize that one of the functionalities doesn't work.
+Let's discuss how to solve a common problem when working in teams. **Suddenly, you realize that one of the functionalities doesn't work**.
 
 Let's say we have several commits since the last working one. We can check them one by one, but it's very inefficient. It would be nice if we only had four commits since the last working one. But what if we have a hundred of them?
 
 Fortunately, Git comes with a core solution for this situation.
 ## Git Bisect
   
-That's the built-in tool in Git for finding specific commits. Thanks to binary search, which has a Big O complexity of O(log n), we can quickly locate the problematic commit.
+That's the **built-in tool in Git** for finding specific commits. Thanks to binary search, which has a **Big O complexity of O(log n)**, we can quickly locate the problematic commit.
 
 If we have 100 commits to search through one by one, the worst-case scenario is finding the issue after 100 attempts. However, with binary search, our worst-case scenario is reduced to just 7 tries.
 
@@ -69,7 +69,7 @@ C:\workspace\playground\git_bisect>git bisect good
 Bisecting: 2 revisions left to test after this (roughly 1 step)
 [11a2851bcd3410b35aa70f4316f73367742cdd48] v7
 ```
-``
+
 We've indicated that the current commit is good. Consequently, Bisect has further divided the range in half, bringing us to commit v7. 
 Is it good or bad? 
 
@@ -102,6 +102,6 @@ Here is simple diagram that might help to understand what happened.
 
 ![Bisect diagram](/blog/git-bisect/1.png)
   
-We keep selecting whether each commit is good or bad, and eventually, we'll find what we're looking for.
+We keep selecting whether each commit is good or bad, and eventually, **we'll find what we're looking for**.
 
-Now that we've identified which commit is causing trouble, we can continue our work. It's a very powerful built-in tool. We don't need to install anything extra, and we can leverage the full power of Git. Enjoy!
+Now that we've identified which commit is causing trouble, we can continue our work. It's a very powerful built-in tool. **We don't need to install anything extra**, and we can leverage the full power of Git. Enjoy!
