--- a/content/blog/local-git-playground.mdx
+++ b/content/blog/local-git-playground.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Local Git Playground'
-publishedAt: 'April 3, 2024'
+publishedAt: 'August 15, 2024'
 author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/local-git-playground/placeholder.png'
@@ -12,7 +12,7 @@ Knowing Git is a crucial development skill nowadays, so experimenting with diffe
 
 Because of that, I will show you how to create a Git playground locally so we can work on our Git skills without pushing trash repositories to our GitHub
 
-### File structure 
+## File structure 
 
 ```
 📦git-playground
@@ -21,21 +21,21 @@ Because of that, I will show you how to create a Git playground locally so we ca
  ┗ 📂computer2   
 ```
 
-### Initialize git
+## Create repo and users
 
-fake-repo
+**fake-repo**
 ```bash
 git init --bare
 ```
 with --bare we create git repository we can pull, push, fetch or clone from it but it doesn't contain files in directory itself.
 
-computer1
+**computer1**
 ```bash
 git init
 git remote add origin ../fake-repo
 ```
 
-computer2
+**computer2**
 ```bash
 git init
 git remote add origin ../fake-repo
@@ -47,24 +47,22 @@ On computer1 and computer2, we initialize the repository and connect to the orig
 
 It very simple and fast way to create git repo for testing purposes. 
 
-### Check if it works
+Check if it works
 
-from /git-playground/computer1
+from **/git-playground/computer1**
 ```bash
-	## Create file.txt with "hello world" string
 	echo "hello world" > file.txt
-	## Add to staging
+
 	git add file.txt
-	## Commit file
+
 	git commit -m "add file.txt"
-	## Push changes to fake-repo
+
 	git push -u origin master
 ```
 
-from /git-playground/computer2
+from **/git-playground/computer2**
 
 ```bash
-	## Pull changes
 	git pull origin master
 ```
 
@@ -72,31 +70,29 @@ Right now, you should see changes from computer2 on computer1 because both are c
 
 Okay, I showed how to set up the connection and verify that it works. Let's see how we can train with Git locally.
 
-### Merge conflict
+## Create merge conflict
 Merge conflicts are a nightmare until you learn how to dance with them. 😄 And the best way to learn any skill is through practice, so let's practice!
 
-from /git-playground/computer1
+from **/git-playground/computer1**
 ```bash
-	## Create file.txt with "hello world" string
 	echo "hello world from computer1" > file.txt
-	## Add to staging
+
 	git add file.txt
-	## Commit file
+
 	git commit -m "add file.txt"
-	## Push changes to fake-repo
+
 	git push
 ```
 
 
-from /git-playground/computer2
+from **/git-playground/computer2**
 ```bash
-	## Create file.txt with "hello world" string
 	echo "hello world from computer2" > file.txt
-	## Add to staging
+
 	git add file.txt
-	## Commit file
+
 	git commit -m "add file.txt"
-	## Push changes to fake-repo
+
 	git push -u origin master
 ```
 
@@ -109,5 +105,5 @@ And... we got rejected. It says that we can't push because there are changes in 
 And... we have a merge conflict. 
 We need to solve the problem. It's up to us how we're going to handle it. It's a perfect situation to train with different approaches.
 
-### Conclusion
+## Conclusion
 Creating a local fake repository is the perfect playground when we're learning Git or want to see what might happen when we're about to perform certain operations in a real-world repository.
