add new post and init animations

--- a/content/blog/global-error-handling-express.mdx
+++ b/content/blog/global-error-handling-express.mdx
@@ -29,6 +29,8 @@ Error: This is our default error at C:\workspace\playground\errorHandlingExpress
 However, in most cases, we work with asynchronous functions in our controllers.
 
 ```jsx
+📜Document.tsx 
+
 app.get('/', async (req: Request, res: Response, next: NextFunction) => {
   throw new Error('This is our default error');
 });
