--- a/content/blog/tracking-active-users.mdx
+++ b/content/blog/tracking-active-users.mdx
@@ -18,7 +18,7 @@ I couldn't find a ready-made solution online, so I created my own solution using
 
 <Question text="Why websockets" />
 
-WebSockets were chosen because they allow real-time updates and the ability to detect when someone leaves a page or when their computer shuts down. Our WebSocket server can track this information, enabling us to handle such events efficiently.
+WebSockets were chosen because they allow real-time updates and the ability to detect when someone disconnect. Our WebSocket server can track this information, enabling us to handle such events efficiently.
 
 ## Libraries for websockets
 
