feature categories in progress

--- a/content/blog/git-bisect.mdx
+++ b/content/blog/git-bisect.mdx
@@ -4,6 +4,7 @@ publishedAt: 'August 1, 2024'
 author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/git-bisect/placeholder.png'
+category: ['git']
 shortDescription: 'That"s the built-in tool in Git for finding specific commits'
 ---
 
