--- a/content/blog/global-error-handling-express.mdx
+++ b/content/blog/global-error-handling-express.mdx
@@ -4,6 +4,7 @@ publishedAt: 'August 20, 2024'
 author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/global-error-handling-express/placeholder.png'
+category: ['expess.js', "node"]
 shortDescription: 'Effective and centralized error handling is crucial for maintaining the stability of any application'
 ---
 
