--- a/content/blog/local-git-playground.mdx
+++ b/content/blog/local-git-playground.mdx
@@ -5,6 +5,7 @@ author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/local-git-playground/placeholder.png'
 shortDescription: 'how to create a Git playground locally so we can work on our Git skills without pushing trash repositories to our GitHub'
+category: ['git']
 ---
 
 
