--- a/content/blog/nginx-reverse-proxy.mdx
+++ b/content/blog/nginx-reverse-proxy.mdx
@@ -5,6 +5,7 @@ author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/nginx-reverse-proxy/placeholder.png'
 shortDescription: 'How to use reverse proxy to controll flow in our multi docker application'
+category: ['nginx', 'docker']
 
 ---
 
