--- a/content/blog/non-pimitive-values-in-usestate.mdx
+++ b/content/blog/non-pimitive-values-in-usestate.mdx
@@ -5,6 +5,7 @@ author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/non-pimitive-values-in-usestate/placeholder.png'
 shortDescription: 'Comparing Non-Primitive Values and Their Implications for useState in React'
+category: ['react']
 ---
 
 Let's start by understanding what happens when we compare primitive and non-primitive values in JavaScript.
