--- a/content/blog/optional-classnames-and-touch-screen-detection-with-tailwindcss.mdx
+++ b/content/blog/optional-classnames-and-touch-screen-detection-with-tailwindcss.mdx
@@ -5,6 +5,7 @@ author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/optional-classnames/placeholder.png'
 shortDescription: 'Clean way to use conditional classnames and detect if user is using touch screen device'
+category: ['tailwind']
 ---
 
 
