--- a/content/blog/tracking-active-users.mdx
+++ b/content/blog/tracking-active-users.mdx
@@ -5,6 +5,7 @@ author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/tracking-active-users/placeholder.png'
 shortDescription: 'Solution for tracking whether users have previously visited and are currently active on specific routes within an application using WebSockets'
+category: ['websockets']
 ---
 
 Recently at work, I had a task to check if someone had previously visited a specific route in the application and is currently active on that page.
