--- a/content/blog/useful-typescript-techniques.mdx
+++ b/content/blog/useful-typescript-techniques.mdx
@@ -5,6 +5,7 @@ author: 'Jakub Jadczyk'
 published: true
 imageSrc: 'blog/useful-typescript-techniques/placeholder.png'
 shortDescription: 'TypeScript features such as discriminated unions, const assertions, and generics'
+category: ['typescript']
 ---
 
 ## Discriminated Unions
