--- a/content/blog/standardizing-code-formatting.mdx
+++ b/content/blog/standardizing-code-formatting.mdx
@@ -94,11 +94,11 @@ npx lint-staged
 
 Here’s the full workflow in action:
 
-1. Add files to staging **git add**
-2. Attempt to commit **git commit**
-3. Pre-commit hook is triggered, running Lint-Staged.
-4. Prettier formats the staged files.
-5. If everything passes, the commit is completed.
+- Add files to staging git add
+- Attempt to commit git commit
+- Pre-commit hook is triggered, running Lint-Staged.
+- Prettier formats the staged files.
+- If everything passes, the commit is completed.
 
 
 ![full-flow](/blog/standardizing-code-formatting/full-flow.gif)
